added debug handlers
